corrijo metodo getMostRepeatedSuit que no funcionaba bien en ciertos casos